# afk-animation

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: webhook.yaml
src/: command.rs  logic.rs  main.rs
src/logic/: mod.rs  terminal.rs  timer.rs
