[package]
name = "afk"
version = "0.1.2"
authors = ["SSlime-s <62363188+SSlime-s@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/SSlime-s/afk-animation"
readme = "README.md"

[[bin]]
name = "afk"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
