[package]
name = "afk"
version = "0.4.1"
authors = ["SSlime-s <62363188+SSlime-s@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/SSlime-s/afk-animation"
readme = "README.md"

[[bin]]
name = "afk"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libc = "0.2"
ctrlc = "3.2"
rand = "0.8"
clap = "2.33.3"
crossterm = "0.29.0"
anyhow = "1.0.99"
